# influence_function

./: LICENSE  Makefile  README.md  lab.code-workspace  setup.cfg
examples/components/datasets/: __init__.py  cifar10.py  mnist.py
examples/executables/: analyze_influence.py  run_train.py
influ_examples/components/: logger.py  simple_log.py  trainer.py
influ_examples/components/datasets/: dataset.py
influ_examples/executables/: analyze_influence.py  run_train.py
influ_examples/notebooks/: influence_viewer.ipynb
influence_function/: influence.py
