[metadata]
name = influence_function
version = 0.9.0
description = library for influence function
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = bci oshita
author_email = oshita.takehito@brains-consulting.co.jp
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    joblib >= 1.2.0
    numpy >= 1.23.5
    torch >= 1.13.1
    torchvision >= 0.14.1
    tqdm >= 4.64.1
    typer >= 0.7.0
    typing_extensions >= 4.4.0
    matplotlib >= 3.6.3
    matplotlib-inline >= 0.1.6
    pandas >= 1.5.3
    polars >= 0.16.2
    ipykernel >= 6.21.1

